<resources>
    <string name="app_name">KatyRamaShay</string>

    <!-- Main Activity Strings -->
    <string name="logoDescriptor">Curae Suprema logo</string>

    <!-- Create Account Page Strings -->
    <string name="firstNameStr">First Name</string>
    <string name="middleNameStr">Middle Name</string>
    <string name="lastNameStr">Last Name</string>
    <string name="headerLabelStr">Create Account</string>
    <string name="hintFirstName">Enter first name</string>
    <string name="hintMiddleName">Enter middle name</string>
    <string name="hintLastName">Enter last name</string>
    <string name="dateOfBirthStr">(mm/dd/yyyy)</string>
    <string name="dateOfBirthLabel">Date of Birth</string>
    <string name="hintLocation">Room number, suite, apartment, etc.</string>
    <string name="locationLabel">Address</string>
    <string name="allergiesLabelStr">Allergies</string>
    <string name="allergiesStr">Nuts, dust, gluten, etc.</string>
    <string name="medicationLabelStr">Medications</string>
    <string name="medicationStr">Medication A, medication B, medication C, etc.</string>

    <!-- Activity Task Page Strings -->
    <string name="taskPageTitleStr">Activity Log</string>
    <string name="showerButtonDescriptor">Shower button</string>
    <string name="mealsButtonDescriptor">Meals button</string>
    <string name="sleepButtonDescriptor">Sleep button</string>
    <string name="exerciseButtonDescriptor">Exercise button</string>
    <string name="peopleButtonDescriptor">People button</string>
    <string name="newTaskButtonDescriptor">New task button</string>
    <string name="viewScheduleButtonStr">My Day</string>

    <!-- New Task Page Strings -->
    <string name="newTaskPageTitleStr">New Task</string>
    <string name="backButtonDescriptionStr">Back button to return to activity log page</string>
    <string name="nameOfTaskHintStr">Name of task</string>
    <string name="dateOfTaskHintStr">Date</string>
    <string name="timeOfTaskHintStr">Time</string>
    <string name="advancedTitleStr">Advanced</string>
    <string name="reminderOfTaskHintStr">Reminder</string>
    <string name="notesOfTaskHintStr">Notes</string>
    <string name="makePermanentButtonContentDescriptionStr">Button to make this task a permanent task and add it to the activity log</string>

    <!-- Log Entry Page Strings -->
    <string name="logEntryTitleStr">Daily Log Entry</string>
    <string name="logEntryQuestionOneStr">How are you feeling mentally today?</string>
    <string name="logEntryQuestionTwoStr">How are you feeling physically today?</string>
    <string name="logEntryQuestionThreeStr">Why do you feel this way?</string>
    <string name="logEntryQuestionThreeHintStr">Type your answer here</string>
    <string name="logEntryButtonDescriptionStr">A button signifying the patients emotion</string>
    <string name="downArrowButtonDescriptionStr">A button allowing the user to move to the next page for more questions</string>
    <string name="doneButtonStr">Done</string>
    <string name="viewLogEntriesButtonStr">View All Entries</string>
    <string name="painQuestionViewStr">How much pain did you feel today?</string>
    <string name="painQuestionFollowUpViewStr">Where/Why?</string>
    <string name="additionalInformationViewStr">Is there anything else you would like to share?</string>
    <string name="physicalHealthSeekBarLeftLabelStr">Terrible</string>
    <string name="physicalHealthSeekBarMiddleLabelStr">Normal</string>
    <string name="physicalHealthSeekBarRightLabelStr">Amazing</string>
    <string name="painSeekBarLeftLabelStr">1</string>
    <string name="painSeekBarRightLabelStr">10</string>

    <!-- Navigation Bar Strings -->
    <string name="taskNavBarDescriptor">Click to go to task page</string>
    <string name="dailyLogNavBarDescriptor">Click to go to daily log page</string>
    <string name="homeNavBarDescriptor">Click to go to home page</string>
    <string name="medicineLogNavBarDescriptor">Click to go to medicine page</string>
    <string name="settingsNavBarDescriptor">Click to go to settings page</string>


    <!-- Home Page Strings -->
    <string name="welcomeHomePageStr">Welcome!</string>
    <string name="dateHomePageStr">Today is ________ _____ __, ____.</string>
    <string name="completionHomePageStr">You have completed __% of your tasks today!</string>
    <string name="completionPercentageStr">__%</string>
    <string name="viewScheduleStr">Click to see your day!</string>
    <string name="medicationTitleStr">Medication</string>

    <!-- Medication Page -->
    <string name="morningLabelStr">Morning</string>
    <string name="afternoonLabelStr">Afternoon</string>
    <string name="eveningLabelStr">Evening</string>
    <string name="morningMed1Str">Morning Med A</string>
    <string name="eveningMed1Str">Evening Med A</string>
    <string name="afternoonMed1Str">Afternoon Med A</string>
    <string name="medInfoButtonStr">View Medication Information</string>

    <!-- Daily Task Page Strings -->
    <string name="dateDailyTaskStr">Thursday, April 26, 2021</string>
    <string name="timeDailyTaskStr">09:00 AM</string>
    <string name="taskNameDailyTaskStr">__________________</string>
    <string name="accountPassStr">Password</string>
    <string name="accountUsernameStr">Username</string>
    <string name="viewLogEntriesStr">View All Entries</string>

    <!-- Settings Page -->
    <string name="accountNameSampleStr">Last Name, First Name</string>
    <string name="userSettingsStr">User Settings</string>
    <string name="usernameEditStr">Change Username</string>
    <string name="passwordEditStr">Change Password</string>
    <string name="settingsLabelStr">Account Settings</string>
    <string name="changeAccountInfoStr">Change Account Information</string>
    <string name="mealsPageLabelStr">Meals</string>
    <string name="mealQuesitonStr">What did/will you have today?</string>
    <string name="mealNameHintStr">Enter meal name here</string>
    <string name="foodPlateQuestionStr">What was/will be in your meal?</string>
    <string name="grainsStr">Grains</string>
    <string name="fruitsStr">Fruits</string>
    <string name="veggiesStr">Vegetables</string>
    <string name="dairyStr">Dairy</string>
    <string name="proteinStr">Protein</string>
    <string name="exercisePageLabel">Exercise</string>
    <string name="todo">TODO</string>
    <string name="completedQuestionStr">Already completed?</string>
    <string name="exerciseTypeQuestionStr">What exercise did/will you do today?</string>
    <string name="timeQuestionStr">When did/will you perform the activity?</string>
    <string name="exerciseTypeHintStr">Enter exercise name here</string>
    <string name="durationAmtStr">Enter the duration here</string>
    <string name="addCommentsLabelStr">Additional Comments</string>
    <string name="addCommentsStr">Add any additional comments here</string>
    <string name="durationLabelStr">Duration</string>
    <string name="socialPageLabel">Socialization</string>
    <string name="socialTypeQuestionStr">What activity did/will you do today?</string>
    <string name="socialPeopleNamesStr">Who did/will you do the activity with?</string>
    <string name="socialTypeHintStr">Enter activity name here</string>
    <string name="socialPeopleNamesHintStr">Enter names here</string>
    <string name="sleepPageLabelStr">Sleep</string>
    <string name="sleepQualityQuestionStr">How well did you sleep last night?</string>
    <string name="sleepQualityHintStr">Enter sleep quality here</string>
    <string name="showerPageLabel">Shower</string>
    <string name="showerQuestionStr">Did you take a shower today?</string>
    <string name="showerCompletionCheckStr">Yes</string>

    <!-- Task Description Pages -->

</resources>