<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/settingsPageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="240dp"
        android:layout_marginRight="240dp"
        android:text="@string/settingsLabelStr"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/accountNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="900dp"
        android:text="@string/accountNameSampleStr"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/userSettingsLabel"
        android:layout_width="500dp"
        android:layout_height="400dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/rounded_corner_grey"
        android:foregroundGravity="center|center_horizontal"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:text="@string/userSettingsStr"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/changeUsernameButton"
        android:layout_width="450dp"
        android:layout_height="75dp"
        android:layout_marginBottom="232dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/usernameEditStr"
        android:textSize="20sp"
        app:backgroundTint="@color/projectRed"
        app:layout_constraintBottom_toBottomOf="@+id/userSettingsLabel"
        app:layout_constraintEnd_toEndOf="@+id/userSettingsLabel"
        app:layout_constraintStart_toStartOf="@+id/userSettingsLabel" />

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="450dp"
        android:layout_height="75dp"
        android:layout_marginBottom="140dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/passwordEditStr"
        android:textSize="20sp"
        app:backgroundTint="@color/projectRed"
        app:layout_constraintBottom_toBottomOf="@+id/userSettingsLabel"
        app:layout_constraintEnd_toEndOf="@+id/userSettingsLabel"
        app:layout_constraintStart_toStartOf="@+id/userSettingsLabel" />

    <Button
        android:id="@+id/changeAccountInfoButton"
        android:layout_width="450dp"
        android:layout_height="75dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/changeAccountInfoStr"
        android:textSize="20sp"
        app:backgroundTint="@color/projectRed"
        app:layout_constraintBottom_toBottomOf="@+id/userSettingsLabel"
        app:layout_constraintEnd_toEndOf="@+id/userSettingsLabel"
        app:layout_constraintStart_toStartOf="@+id/userSettingsLabel" />

    <LinearLayout
        android:id="@+id/NavigationBar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/taskNavBarButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/taskNavBarDescriptor"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/tasknavbar" />

        <ImageButton
            android:id="@+id/dailyLogNavBarButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/dailyLogNavBarDescriptor"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/dailylognavbar" />

        <ImageButton
            android:id="@+id/homeNavBarButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/homeNavBarDescriptor"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/homenavbar" />

        <ImageButton
            android:id="@+id/medicineNavBarButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/medicineLogNavBarDescriptor"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/medicinenavbar" />

        <ImageButton
            android:id="@+id/settingsNavBarButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/settingsNavBarDescriptor"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/settingsnavbarselected" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>