<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context=".Medications">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="29dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/medicationsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/medicationTitleStr"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/morningMedLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/morningLabelStr"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <CheckBox
            android:id="@+id/morningMedCheck"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_margin="5dp"
            android:background="#5C000000"
            android:button="@null"
            android:checked="false"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
            android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
            android:paddingStart="25dp"
            android:paddingLeft="25dp"
            android:paddingTop="0dp"
            android:paddingEnd="10dp"
            android:paddingRight="25dp"
            android:paddingBottom="0dp"
            android:text="@string/morningMed1Str"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/afternoonMedLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/afternoonLabelStr"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <CheckBox
            android:id="@+id/afternoonMedCheck"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_margin="5dp"
            android:background="#5C000000"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
            android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
            android:paddingStart="25dp"
            android:paddingLeft="25dp"
            android:paddingTop="0dp"
            android:paddingEnd="10dp"
            android:paddingRight="25dp"
            android:paddingBottom="0dp"
            android:text="@string/afternoonMed1Str"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/eveningMedLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/eveningLabelStr"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <CheckBox
            android:id="@+id/eveningMedCheck"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_margin="5dp"
            android:background="#5C000000"
            android:button="@null"
            android:checked="false"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
            android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
            android:paddingStart="25dp"
            android:paddingLeft="25dp"
            android:paddingTop="0dp"
            android:paddingEnd="10dp"
            android:paddingRight="25dp"
            android:paddingBottom="0dp"
            android:text="@string/eveningMed1Str"
            android:textSize="18sp"
            app:useMaterialThemeColors="false" />

        <Button
            android:id="@+id/medInfoButton"
            android:layout_width="565dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="300dp"
            android:background="@drawable/rounded_corner"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/medInfoButtonStr"
            android:textSize="20sp"
            app:backgroundTint="#C20606" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/NavigationBar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/taskNavBarButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/taskNavBarDescriptor"
            android:onClick="performTaskPage"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/tasknavbar" />

        <ImageButton
            android:id="@+id/logEntryNavBarButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/medicineLogNavBarDescriptor"
            android:onClick="performLogEntry"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/dailylognavbar" />

        <ImageButton
            android:id="@+id/homeNavBarButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/homeNavBarDescriptor"
            android:onClick="performHome"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/homenavbar" />

        <ImageButton
            android:id="@+id/medicineNavBarButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/medicineLogNavBarDescriptor"
            android:onClick="performMedications"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/medicinenavbarselected" />

        <ImageButton
            android:id="@+id/settingsNavBarButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/settingsNavBarDescriptor"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/settingsnavbar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>