<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DailyTaskConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DailyTask">

    <TextView
        android:id="@+id/dateTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center_horizontal"
        android:text="@string/dateDailyTaskStr"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/NavigationBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTitle"
        tools:listitem="@layout/daily_item" />

    <LinearLayout
        android:id="@+id/NavigationBar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/taskNavBarButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/taskNavBarDescriptor"
            android:onClick="performTaskPage"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/tasknavbarselected" />

        <ImageButton
            android:id="@+id/dailyLogNavBarButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/dailyLogNavBarDescriptor"
            android:onClick="performDailyLog"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/dailylognavbar" />

        <ImageButton
            android:id="@+id/homeNavBarButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/homeNavBarDescriptor"
            android:onClick="performHome"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/homenavbar" />

        <ImageButton
            android:id="@+id/medicineNavBarButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/medicineLogNavBarDescriptor"
            android:onClick="performMedications"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/medicinenavbar" />

        <ImageButton
            android:id="@+id/settingsNavBarButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/settingsNavBarDescriptor"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/settingsnavbar" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>